--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #a855f7;
+  background-color: #28242c;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -36,5 +36,43 @@ h1 span:nth-child(6) {
 @keyframes bounce {
   100% {
     top: -20px;
+  }
+}
+.logo {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  animation-name: move-logo, spin-logo;
+  animation-duration: 5s, 1s;
+  animation-iteration-count: infinite, infinite;
+}
+@keyframes move-logo {
+  0% {
+    left: 20px;
+    top: 20px;
+  }
+  25% {
+    left: calc(100% - 120px);
+    top: 20px;
+  }
+  50% {
+    left: calc(100% - 120px);
+    top: calc(100% - 120px);
+  }
+  75% {
+    left: 20px;
+    top: calc(100% - 120px);
+  }
+  100% {
+    left: 20px;
+    top: 20px;
+  }
+}
+@keyframes spin-logo {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
